--- a/.gitignore
+++ b/.gitignore
@@ -1,30 +1,9 @@
-# Gradle files
-.gradle/
-build/
+#Node-RED
 
-# Local configuration file (sdk path, etc)
-local.properties
+nodered/.npm/
+nodered/lib/
+nodered/node_modules/
 
-# Log/OS Files
-*.log
+#InfluxDB
 
-# Android Studio generated files and folders
-captures/
-.externalNativeBuild/
-.cxx/
-*.apk
-output.json
-
-# IntelliJ
-*.iml
-.idea/
-
-# Keystore files
-*.jks
-*.keystore
-
-# Google Services (e.g. APIs or Firebase)
-google-services.json
-
-# Android Profiling
-*.hprof
+influxdb/
